adding students to tasks in db, etc
